--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^3.8.17"
   },
   "devDependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "chai": "^1.9.2"
   }
 }
